--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@ ul {
 li {
     color: white;
     list-style-type: none;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #lenDisplay {
